--- a/iframe.html
+++ b/iframe.html
@@ -8,9 +8,9 @@
 <meta name="description" content="ckplayer(超酷网页视频播放器),支持http协议下的flv,f4v,mp4,支持rtmp视频流和rtmp视频回放，支持m3u8格式，是你做视频直播，视频点播的理想播放器 " />
 <meta name="author" content="ckplayer,超酷网页视频播放器" />
 <meta name="copyright" content="ckplayer,超酷网页视频播放器" />
-<script type="text/javascript" src="/static/js/jq1.9.1.js"></script>
-<script type="text/javascript" src="/static/js/help.js"></script>
-<link href="/static/css/example.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="static/js/jq1.9.1.js"></script>
+<script type="text/javascript" src="static/js/help.js"></script>
+<link href="static/css/example.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .vlist {
 	height: 400px;
@@ -159,7 +159,7 @@
 		</ul>
 	</div>
 </div>
-<script type="text/javascript" src="/ckplayer/ckplayer.js"></script>
+<script type="text/javascript" src="ckplayer/ckplayer.js"></script>
 <script type="text/javascript">
 	function loadedHandler(){
 		if(CKobject.getObjectById('ckplayer_a1').getType()){//说明使用html5播放器
